# 0xSurfer

./: CMakeLists.txt  main.cpp  readme.md
include/: browser.h  browser.ui
src/: blank.html  browser.cpp  main.cpp
